BTWCT-5366-ui-production-z-index-issue-with-anchor-and-banner-component Modified the z-index property of the banner component and added some extra z-index properties so tha the z indices are stored in the same place

--- a/waters-aem-frontend/src/styles/variables.scss
+++ b/waters-aem-frontend/src/styles/variables.scss
@@ -144,18 +144,23 @@ $header-mobile-z-index: 400;
 $header-overlay-z-index: 505;
 $header-top-bar-z-index: 505;
 $header-top-bar-user-z-index: 506;
-
-$cmp-banner-z-index: 399;
+$cmp-banner-z-index: 99;
 $cmp-banner-active-overlay-z-index: 401;
 $navigation-z-index: 401;
 $navigation-overlay-z-index: 400;
 $navigation-group-z-index: 402;
 $navigation-level-0-z-index:402;
 $navigation-after-z-index: 405;
-
-
 $sku-details-sticky-index: 498;
 $cmp-modal-box-z-index: 499;
+$cmp-search-bar-z-index: 9999;
+$cmp-title-z-index: 9999;
+$cmp-search-overlay-z-index: 9999;
+$image-viewer-container__image-zoom-z-index: 99;
+$screen-reader-textfocus-z-index: 100000;
+$cmp-back-to-top-z-index: 98;
+$cmp-anchor--sticky-z-index: 100;
+
 
 $border-radius: 4px;
 
